# citadel-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: linters.yml
config/: .env.example  init-mongo.js
server/: __init__.py  app.py  database.py  loader.py  run.py  utils.py
server/documents/: fotd.py  users.py
server/filters/: text_filters.py
server/keyboards/: buttons.py  inline.py  main.py  start.py
server/modules/: __init__.py  handlers.py
server/modules/core/: main.py  start.py
server/modules/dvach/: constants.py  handlers.py  top_logic.py
server/modules/fotd/: handlers.py  roll_fotd_logic.py
server/modules/randomizer/: anime_logic.py  boobs_logic.py  butt_logic.py  cat_logic.py  dog_logic.py  handlers.py  logic.py
server/modules/roll/: handlers.py
server/modules/scheduling/: __init__.py  dobloe_utlo.py
server/modules/users/: handlers.py  register_user_logic.py
server/settings/: dev.py
