[tool.poetry]
name = "citadel-bot"
version = "0.1.0"
description = "Citadel bot"
authors = ["goddesseyes <goddesseyes@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.16.0"
lambdas = "^0.1.0"
aiogram = "^2.14.3"
odmantic = "^0.3.5"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
taskipy = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
