[tool.poetry]
name = "citadel-bot"
version = "0.1.0"
description = "Citadel bot"
authors = ["goddesseyes <goddesseyes@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.16.0"
lambdas = "^0.1.0"
aiogram = "^2.14.3"
odmantic = "^0.3.5"
pydantic = "^1.8.2"
httpx = "^0.19.0"
more-itertools = "^8.9.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
mypy = "^0.910"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
