[tool.poetry]
name = "citadel-bot"
version = "0.1.0"
description = "Citadel bot"
authors = ["goddesseyes <goddesseyes@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.17.0"
aiogram = "^2.15"
odmantic = "^0.3.5"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
httpx = "^0.19.0"
more-itertools = "^8.10.0"
APScheduler = "^3.8.0"
placeholder = "^1.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
mypy = "^0.910"
autopep8 = "^1.5.7"
black = "^21.9b0"
taskipy = "^1.9.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
lint = "task flake; task black-lint; task isort-lint"
format = "task black; task isort"
mypy = "mypy server"
flake = "flake8 server"

isort = "isort server"
isort-lint = "isort --check-only server"

black = "black server"
black-lint = "black --check server"


[tool.black]
line-length = 120
target-version = ["py39"]
extend-exclude = '''
(
  /(
    # Exclude folders
    | server/settings
  )/
  # Eclude files
)
'''
skip-string-normalization = true
experimental-string-processing = true


[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["server"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
